Fix cells overflowing on thin width

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 .board-row {
     margin-bottom: 1em;
+    white-space: nowrap;
 }
 
 .board-cell {
